k8s_deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adhanplayer
  labels:
    name: adhanplayer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adhanplayer
  namespace: adhanplayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adhanplayer
  template:
    metadata:
      labels:
        app: adhanplayer
    spec:
      nodeName: pi44gb
      containers:
      - name: adhanplayer
        image: phillogic/adhanplayer:latest
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
---

apiVersion: v1
kind: Service
metadata:
  name: adhanplayer-metrics-service
  namespace: adhanplayer
  labels:
    app: adhanplayer
spec:
  selector:
    app: adhanplayer
  ports:
  - name: metrics
    port: 8000
