k8s_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adhanplayer
  namespace: adhanplayer
  labels:
    app: adhanplayer
spec:
  selector:
    app: adhanplayer
  ports:
  - name: http
    port: 8000
    targetPort: 8000
